--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,10 +8,11 @@
             <ol>
                 {{#each burgers}}
                     {{#unless devoured}}
-                    <li>{{burger_name}} <a href="#" class="devour" data-id="{{id}}">Devour</a></li>
+                    <li>{{burger_name}} <span>Ordered by {{Customer.customer_name}}</span> <a href="#" class="devour" data-id="{{id}}">Devour</a></li>
                     {{/unless}}
                 {{/each}}
             </ol>
+            <p>Sorted Alphabetically</p>
         </div>
 
         <div class="burger-box burgers-devoured">
@@ -19,18 +20,38 @@
              <ol>
                 {{#each burgers}}
                     {{#if devoured}}
-                    <li>{{burger_name}}</li>
+                    <li>{{burger_name}} <span>Eaten by {{Customer.customer_name}}</span></li>
                     {{/if}}
                 {{/each}}
             </ol>
+            <p>Sorted Alphabetically</p>
         </div>
        
-        <form class="create-form">
-            <div class="form-group">
-                <label for="ca"><i class="fas fa-hamburger"></i>&nbsp; Add Custom Burger:</label>
-                <input type="text" id="burger_name" name="burger_name" placeholder="Burger Name">
-            </div>
-            <button type="submit">Add Burger</button>
-        </form>
+       <div class="form-content">
+           <form class="add-customer-form">
+                <div class="form-group">
+                    <label for="ca"><i class="fas fa-user"></i>&nbsp; Add Customer:</label>
+                    <input type="text" id="customer_name" name="customer_name" placeholder="Customer Name">
+                </div>
+                <button type="submit">Add Customer</button>
+            </form>
+            <br clear="all"><br>
+            <form class="create-form">
+                <div class="form-group">
+                    <label for="ca"><i class="fas fa-hamburger"></i>&nbsp; Add Custom Burger:</label>
+                    <input type="text" id="burger_name" name="burger_name" placeholder="Burger Name">
+                    <label>Select Customer</label>
+                    <select id="customer" class="customer">
+                        <option value="">- Select Customer -</option>
+                    {{#each users}}
+                        <option value="{{id}}">{{customer_name}}</option>
+                    {{/each}}
+                    </select>
+                </div>
+                <br clear="all"><br>
+                <button type="submit">Add Burger</button>
+            </form>
+       </div>
+        
     </div>
 </div>
